# crazyswarm2

crazyflie_examples/: setup.cfg
crazyflie_examples/crazyflie_examples/: figure8.py  generate_small_rectangle.py  generate_small_rectangle_absolute.py  generate_takeoff_bob_rotate.py  generate_yaw_rotation.py  hello_world.py  small_rectangle.py  small_rectangle_absolute.py  takeoff_bob_rotate.py  yaw_rotation.py
crazyflie_examples/crazyflie_examples/data/: small_rectangle.csv  small_rectangle_absolute.csv  small_rectangle_absolute_waypoints.csv  small_rectangle_waypoints.csv  takeoff_bob_rotate.csv  takeoff_bob_rotate_waypoints.csv  yaw_rotation.csv  yaw_rotation_waypoints.csv
