[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    small_rectangle_absolute = crazyflie_examples.small_rectangle_absolute:main
    generate_small_rectangle_absolute = crazyflie_examples.generate_small_rectangle_absolute:main
    yaw_rotation = crazyflie_examples.yaw_rotation:main
    generate_yaw_rotation = crazyflie_examples.generate_yaw_rotation:main
    takeoff_bob_rotate = crazyflie_examples.takeoff_bob_rotate:main
    generate_takeoff_bob_rotate = crazyflie_examples.generate_takeoff_bob_rotate:main
    goto_unicast = crazyflie_examples.goto_unicast:main
    group_mask = crazyflie_examples.group_mask:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    swap = crazyflie_examples.swap:main
    infinite_flight = crazyflie_examples.infinite_flight:main
    arming = crazyflie_examples.arming:main
